	  are after this point, but really causes problems if you want to handle
	  data and prefectch aborts which are within this zeroed region.

5.11 2010-10-01 Gregory Nutt <spudmonkey@racsa.co.cr>

	* configs/ea3131/src/up_fillpage.c - Added new configuration item
	  CONFIG_PAGING_BINPATH.  If CONFIG_PAGING_BINPATH is defined, then it
	  is the full path to a file on a mounted file system that contains
	  a binary image of the NuttX executable.  Pages will be filled by
	  reading from offsets into this file that correspond to virtual
	  fault addresses.  up_fillpage.c implements logic to perform page
	  files using the CONFIG_PAGING_BINPATH file.
	* configs/mbed - Add configuration to support the mbed.org LPC1768
	  board (Contributed by Dave Marples).
	* sched/sem_wait.c and sem_waitirq.c - Eliminate a race condition
	  that can occur when a semaphore wait is interrupt by a signal.
	  (see email thread: http://tech.groups.yahoo.com/group/nuttx/message/530)
	* drivers/mtd/at45db.c - Add a driver for the Atmel AT45DB161D 4Mbit
	  SPI FLASH part (untested on initial check-in).
	* arch/arm/src/lm3s and arch/arm/include/lm3s - Corrections for the
	  lm3s8962 port contributed by Larry Arnold.  That port is purported
	  to work correctly with these changes in place.
	* examples/ostest/prioinherit.c - Need to reinitialize globals if
	  test is ran repeatedly in a loop.
	* configs/ez80f910200zco - Updated to used ZDS-II 4.11.1

5.12 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/avr - Add a place to support AVR family processors.
	* arch/avr/include/avr32 and arch/avr/src/avr32 - Add support for AVR32
	  (all of the AVR32 is a work in progress).
	* arch/avr/include/at91uc3 and arch/avr/src/at91uc3 - Add support
	  for the AT91 UC3A/B family of AVR32 MCUs.
	* confgs/avr32dev1 - Add support for the Atmel AVR32DEV1 board featuring
	  the AT91UC3B0256 MCU.  This board is produced by www.mcuzone.com.
	* include/stdlib.h, lib/Makefile and lib/lib_abs.c - Add abs().

