@@ -1914,8 +1914,9 @@ nuttx-5.12 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  for the AT91 UC3A/B family of AVR32 MCUs.
 	* confgs/avr32dev1 - Add support for the Atmel AVR32DEV1 board featuring
 	  the AT91UC3B0256 MCU.  This board is produced by www.mcuzone.com.
-	* include/stdlib.h, lib/Makefile and lib/lib_abs.c - Add abs().
-
+	* include/stdlib.h, lib/Makefile, lib/lib_abs.c, lib/lib_labs.c,
+	  lib_labs.c, lib_llabs.c, lib_imaxabs.c - Add abs(), labs(), llabs(), and
+	  imaxabs().
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
